# task-logging

./: .gitignore  .pre-commit-config.yaml  README.md  error_context.txt  error_log.txt  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  how_to_publish.md
task_logging/: __init__.py  models.py  task_logger.py  task_logging_database_interface.py
tests/: simple_task_logger_database.py  test_class_func_logger.py  test_func_logger.py  test_task_logger.py
